Fixed the gap

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -282,12 +282,19 @@ footer {
   }
 }
 @media only screen and (max-width: 1080px) {
+  #home-carousel-wrapper {
+    display: none;
+  }
   #home-carousel {
     display: none;
   }
   #phone-version {
     display: flex;
   }
+}
+#home-carousel {
+  justify-content: center;
+  align-items: center;
 }
 #phone-version .card-wrapper {
   box-shadow: none;
